--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </svg>
           </div>
           <h5 class="name">
-            Improve
+            Infrastructure
           </h5>
         </div>
         <div class="box" style="">
